add something new

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,3 +1,32 @@
-    <div class="container" ng-controller="IndexController">
 
+    
+    
+    <div class="container" id="main-container" ng-init="init()">
+        <table class="table" id="form-container">
+            <thead>
+                <th>
+                    <td>标题</td>
+                    <td>时间</td>
+                    <td>状态</td>
+                    <td>操作<button type="button" class="btn btn-warning" id="new-form1">新建问卷</button></td>
+                </th>
+            </thead>
+            
+            <tbody ng-repeat="form in forms">
+                <tr>
+                    <td><input type="radio" id="radio"+{{form["_id"]}}></td>
+                    <td>{{form["name"]}}</td>
+                    <td>{{form["date"]}}</td>
+                    <td ng-bind-html="statusHTML[form['status']]|trust2Html"></td>
+                    <td>
+                        <button type="button" class="btn btn-default" ng-click="click($event)" id="button1-" + {{form["_id"]}}>编辑</button>
+                        <button type="button" class="btn btn-default" ng-click="click($event)" id="button2-" + {{form["_id"]}}>删除</button>'
+                        <button type="button" class="btn btn-default" ng-click="click($event)" id="button3-" + {{form["_id"]}}>{{text[form["status"]]}}</button>
+                    <td>
+                </tr>
+            </tbody>    
+            
+        </table>
+        
+        <button type="button" class="btn btn-warning" id="new-form">新建问卷</button>
     </div>
