--- a/app/views/header.html
+++ b/app/views/header.html
@@ -1,3 +1,3 @@
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-inverse" role="navigation">
 
-</header>
+</nav>
