--- a/app/views/header.html
+++ b/app/views/header.html
@@ -1,3 +1,18 @@
-<nav class="navbar navbar-inverse" role="navigation">
-
+<nav class="navbar" id="header-nav" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" ui-sref="app"><span class="glyphicon glyphicon-question-sign" aria-hidden="true">问卷管理</span>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li><a ui-sref="app">我的问卷</a></li>
+            </ul>
+        </div>
+    </div>
 </nav>
