--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,32 +1,33 @@
 
     
     
-    <div class="container" id="main-container" ng-init="init()">
-        <table class="table" id="form-container">
+    <div class="container" id="main-container">
+        <table class="table" id="form-container" ng-show="isShow">
             <thead>
                 <th>
                     <td>标题</td>
                     <td>时间</td>
                     <td>状态</td>
-                    <td>操作<button type="button" class="btn btn-warning" id="new-form1">新建问卷</button></td>
+                    <td>操作<button type="button" class="btn btn-warning" ui-sref="app.edit" id="new-form1">新建问卷</button></td>
                 </th>
             </thead>
             
             <tbody ng-repeat="form in forms">
-                <tr>
+                <tr ng-class="{pink: isHover}" ng-mouseenter="isHover=true" ng-mouseleave="isHover=false">
                     <td><input type="radio" id="radio"+{{form["_id"]}}></td>
                     <td>{{form["name"]}}</td>
                     <td>{{form["date"]}}</td>
                     <td ng-bind-html="statusHTML[form['status']]|trust2Html"></td>
                     <td>
-                        <button type="button" class="btn btn-default" ng-click="click($event)" id="button1-" + {{form["_id"]}}>编辑</button>
-                        <button type="button" class="btn btn-default" ng-click="click($event)" id="button2-" + {{form["_id"]}}>删除</button>'
-                        <button type="button" class="btn btn-default" ng-click="click($event)" id="button3-" + {{form["_id"]}}>{{text[form["status"]]}}</button>
+                        <button type="button" class="btn btn-default" ng-click="click($event)" id='button-1-{{form["_id"]}}'>编辑</button>
+                        <button type="button" class="btn btn-default" ng-click="click($event)" id='button-2-{{form["_id"]}}'>删除</button>'
+                        <button type="button" class="btn btn-default" ng-click="click($event)" id='button-3-{{form["_id"]}}'>{{text[form["status"]]}}</button>
                     <td>
                 </tr>
-            </tbody>    
+            </tbody>
+            
             
         </table>
         
-        <button type="button" class="btn btn-warning" id="new-form">新建问卷</button>
+        <button type="button" class="btn btn-warning" ui-sref="app.edit" id="new-form" ng-hide="isShow">新建问卷</button>
     </div>
