--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,6 +4,8 @@ body {
     background: grey;
 }
 
+/*  CSS for manage page */
+
 #form-container {
     margin: 0 auto;
     padding-top: 200px;
@@ -15,4 +17,196 @@ body {
 
 .pink {
     background: pink;
+}
+
+body {
+    height: 100%;
+}
+
+.overlay-mask {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 15;
+    cursor: pointer;
+    background: rgba(0,0,0,0.5);
+}
+.hide {
+    display: none!important;
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 10;
+    overflow: hidden;
+    -webkit-overflow-scrolling: touch;
+    outline: 0;
+    /* width: 600px; */
+    margin: 0 auto;
+    display: flex;
+    height: 100%;
+    /* border: 1px solid red; */
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-open .modal {
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.modal-dialog {
+    position: relative;
+    width: auto;
+    margin: 10px;
+    width: 600px;
+    z-index: 20;
+}
+
+.modal .close {
+    float: right;
+    font-size: 21px;
+    font-weight: 700;
+    line-height: 1;
+    color: #000;
+    text-shadow: 0 1px 0 #fff;
+    filter: alpha(opacity=20);
+    opacity: .2;
+}
+
+.modal-content {
+    position: relative;
+    background-color: #fff;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    border: 1px solid #999;
+    border: 1px solid rgba(0, 0, 0, .2);
+    border-radius: 6px;
+    outline: 0;
+    -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
+    box-shadow: 0 3px 9px rgba(0, 0, 0, .5)
+}
+
+.modal-backdrop {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1040;
+    background-color: #000
+}
+
+.modal-backdrop .fade {
+    filter: alpha(opacity=0);
+    opacity: 0
+}
+
+.modal-backdrop .in {
+    filter: alpha(opacity=50);
+    opacity: .5
+}
+
+.modal-header {
+    min-height: 16.43px;
+    padding: 15px;
+    border-bottom: 1px solid #e5e5e5
+}
+
+.modal-header .close {
+    margin-top: -2px
+}
+
+.modal-title {
+    margin: 0;
+    line-height: 1.42857143
+}
+
+.modal-body {
+    position: relative;
+    padding: 15px
+}
+
+.modal-footer {
+    padding: 15px;
+    text-align: right;
+    border-top: 1px solid #e5e5e5
+}
+
+.modal-footer .btn+.btn {
+    margin-bottom: 0;
+    margin-left: 5px
+}
+
+.modal-footer .btn-group .btn+.btn {
+    margin-left: -1px
+}
+
+.modal-footer .btn-block+.btn-block {
+    margin-left: 0
+}
+
+.modal-scrollbar-measure {
+    position: absolute;
+    top: -9999px;
+    width: 50px;
+    height: 50px;
+    overflow: scroll
+}
+
+/*  CSS for edit page */
+
+#edit-container {
+    width: 50%;
+    height: auto;
+    margin: 50px auto;
+    background: white;
+}
+
+#form-title {
+    width: 80%;
+    height: 50px;
+    margin: 10px auto;
+    
+    
+}
+
+#add-container {
+    width: 80%;
+    height: auto;
+    margin: 20px auto;
+    border-top: 2px solid black; 
+    border-bottom: 2px solid black; 
+}
+
+#add-container-inside {
+    width: 100%;
+    height: auto;
+    margin: 20px auto;
+    border: 1px solid black;
+}
+
+#add-type {
+    width: 50%;
+    margin: 10px auto;
+}
+
+#add-type button {
+    margin: 0 10px;
+}
+
+#add-question {
+    width: 100%;
+    border: 0;
+    background: #E6E6E6;
+}
+
+#question-container {
+    width: 100%;
 }
