--- a/app/views/edit.html
+++ b/app/views/edit.html
@@ -1,1 +1,42 @@
-<p>Edit here</p>
+    
+    <div class="container" id="edit-container" ng-init="init()">
+    
+        <div contenteditable="true" id="form-title" title="点击编辑标题" ng-class="{pink: isHover}" ng-mouseenter="isHover=true" ng-mouseleave="isHover=false">{{form["name"]}}</div>
+        <div class="container" id="add-container">
+            <div id="add-container-inside">
+                <div id="question-container">
+                    <div class="question" ng-class="{pink: isHover}" ng-mouseenter="isHover=true" ng-mouseleave="isHover=false" ng-repeat="question in form.questions track by $index">
+                        <div class="question-title">
+                            Q{{form.questions.indexOf(question) + 1}}&nbsp;&nbsp;{{question.title}}
+                        </div>
+                        
+                        <div class="select-options" ng-repeat="option in question.chose">
+                            <input type="radio" name="question.title" ng-show="question.type == 1">
+                            <input type="checkbox" ng-show="question.type == 2">
+                            {{option}}
+                        </div>
+                        <textarea ng-show="question.type == 3"></textarea>
+                        
+                        <div class="question-operation" ng-show="isHover">
+                            <span class="operation" ng-click="moveUpQuestion(question)">上移</span>
+                            <span class="operation" ng-click="moveDownQuestion(question)">下移</span>
+                            <span class="operation" ng-click="reuseQuestion(question)">复用</span>
+                            <span class="operation" ng-click="deleteQuestion(question)">删除</span>
+                        </div>
+                    </div>
+                </div>
+                
+                <div id="add-type" ng-show="isAdd">
+                    <button class="btn btn-default" ng-click="addOneSelect()">单选</button>
+                    <button class="btn btn-default" ng-click="addMutiSelect()">多选</button>
+                    <button class="btn btn-default" ng-click="addTextSelect()">文本题</button>
+                </div>
+
+                <div id="main-add">
+                    <button class="btn btn-default btn-lg" id="add-question" ng-click="isAdd=true">添加问题</button>
+                </div>    
+            </div> 
+        </div>
+        <button class="btn btn-default">保存问卷</button>
+        <button class="btn btn-warning">发布问卷</button>
+    </div>
