--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -3,7 +3,176 @@
 body {
     width: 100%;
     height: auto;
-    background: grey;
+    background: #F2F2F2;
+}
+
+table {
+  background-color: transparent;
+}
+
+a {
+    text-decoration: none;
+}
+
+caption {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  color: #777;
+  text-align: left;
+}
+
+textarea {
+    resize: none;
+}
+
+th {
+  text-align: left;
+}
+
+.container {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+@media (min-width: 768px) {
+  .container {
+    width: 750px;
+  }
+  textarea {
+    width: 150px;
+    height: 25px;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    width: 970px;
+  }
+  textarea {
+    width: 200px;
+    height: 30px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
+  textarea {
+    width: 300px;
+    height: 50px;
+  }
+}
+
+.navbar {
+  position: relative;
+  min-height: 50px;
+  margin-bottom: 20px;
+  border: 1px solid transparent;
+}
+@media (min-width: 768px) {
+  .navbar {
+    border-radius: 4px;
+  }
+}
+@media (min-width: 768px) {
+  .navbar-header {
+    float: left;
+  }
+}
+.navbar-collapse {
+  padding-right: 15px;
+  padding-left: 15px;
+  overflow-x: visible;
+  -webkit-overflow-scrolling: touch;
+  border-top: 1px solid transparent;
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
+}
+
+.navbar-brand {
+  float: left;
+  height: 50px;
+  padding: 15px 15px;
+  font-size: 18px;
+  line-height: 20px;
+}
+.navbar-brand:hover,
+.navbar-brand:focus {
+  text-decoration: none;
+}
+.navbar-brand > img {
+  display: block;
+}
+@media (min-width: 768px) {
+  .navbar > .container .navbar-brand,
+  .navbar > .container-fluid .navbar-brand {
+    margin-left: -15px;
+  }
+}
+
+.navbar-toggle {
+  position: relative;
+  float: right;
+  padding: 9px 10px;
+  margin-top: 8px;
+  margin-right: 15px;
+  margin-bottom: 8px;
+  background-color: transparent;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+.navbar-toggle:focus {
+  outline: 0;
+}
+.navbar-toggle .icon-bar {
+  display: block;
+  width: 22px;
+  height: 2px;
+  border-radius: 1px;
+}
+.navbar-toggle .icon-bar + .icon-bar {
+  margin-top: 4px;
+}
+@media (min-width: 768px) {
+  .navbar-toggle {
+    display: none;
+  }
+}
+
+.table {
+  width: 100%;
+  max-width: 100%;
+  margin-bottom: 20px;
+}
+.table > thead > tr > th,
+.table > tbody > tr > th,
+.table > tfoot > tr > th,
+.table > thead > tr > td,
+.table > tbody > tr > td,
+.table > tfoot > tr > td {
+  padding: 8px;
+  line-height: 1.42857143;
+  vertical-align: top;
+  border-top: 1px solid #ddd;
+}
+.table > thead > tr > th {
+  vertical-align: bottom;
+  border-bottom: 2px solid #ddd;
+}
+.table > caption + thead > tr:first-child > th,
+.table > colgroup + thead > tr:first-child > th,
+.table > thead:first-child > tr:first-child > th,
+.table > caption + thead > tr:first-child > td,
+.table > colgroup + thead > tr:first-child > td,
+.table > thead:first-child > tr:first-child > td {
+  border-top: 0;
+}
+.table > tbody + tbody {
+  border-top: 2px solid #ddd;
+}
+.table .table {
+  background-color: #fff;
 }
 
 .btn {
@@ -59,12 +228,24 @@ body {
     padding-top: 200px;
 }
 
+#form-container tbody {
+    background: #fff;
+}
+
 #header-nav {
     background: orange;
 }
 
 .pink {
-    background: pink;
+    background: #F8E0E0;
+}
+
+.warning {
+    background: #f0ad4e;  
+}
+
+.disabled {
+    color: #D8D8D8;
 }
 
 body {
@@ -208,6 +389,10 @@ body {
     overflow: scroll
 }
 
+#new-form1 {
+    float: right;
+}
+
 /*  CSS for edit page */
 
 #edit-container {
@@ -221,23 +406,57 @@ body {
     width: 80%;
     height: 50px;
     margin: 10px auto;
+    margin-left: 10%;
+    text-align: center;
+    font-size: 25px;
+    font-weight: bold;
     border: 0;
     
+}
+
+.question-title {
+    padding: 10px 0;
+    font-weight: bold;
+}
+
+.question {
+    padding: 0 20px;
+    overflow: hidden;
+}
+
+.question-operation {
+    float: right;
+    margin-bottom: 10px;
+}
+
+.question-operation span {
+    cursor: pointer;
+}
+
+.question-operation span:hover {
+    background: red;
+}
+
+.select-options {
+    margin: 10px 20px;
+}
+
+#main-add {
+    border: 1px solid #D8D8D8;
 }
 
 #add-container {
     width: 80%;
     height: auto;
     margin: 20px auto;
-    border-top: 2px solid black; 
-    border-bottom: 2px solid black; 
+    border-top: 2px solid #D8D8D8; 
+    border-bottom: 2px solid #D8D8D8; 
 }
 
 #add-container-inside {
     width: 100%;
     height: auto;
     margin: 20px auto;
-    border: 1px solid black;
 }
 
 #add-type {
@@ -246,7 +465,7 @@ body {
 }
 
 #add-type button {
-    margin: 0 10px;
+    margin: 0 5px;
 }
 
 #add-question {
@@ -257,6 +476,26 @@ body {
 
 #question-container {
     width: 100%;
+}
+
+.isMust {
+    float: right;
+    font-weight: auto;
+}
+
+#edit-btn1, #edit-btn2 {
+    width: 12%;
+    margin: 10px 0;
+}
+
+#edit-btn1 {
+    margin-left: 35%;
+    margin-right: 1%;
+}
+
+#edit-btn2 {
+    margin-left: 1%;
+    margin-right: 35%;
 }
 
 /*  CSS for view page */
@@ -272,7 +511,22 @@ body {
     width: 80%;
     height: auto;
     margin: 20px auto;
-    border: 2px solid black;
+}
+
+#view-title {
+    width: 80%;
+    height: 50px;
+    margin: 10px auto;
+    padding-top: 20px;
+    margin-left: 10%;
+    text-align: center;
+    font-size: 25px;
+    font-weight: bold;
+    border: 0;
+}
+
+#isMust1 {
+    float: right;
 }
 
 /*  CSS for data page  */
@@ -334,5 +588,9 @@ body {
     width: 80%;
     height: auto;
     margin: 20px auto;
-    border: 2px solid black;
+}
+
+#data-btn {
+    width: 10%;
+    margin: 20px 45%;
 }
