--- a/app/views/edit.html
+++ b/app/views/edit.html
@@ -8,6 +8,7 @@
                     <div class="question" ng-class="{pink: isHover}" ng-mouseenter="isHover=true" ng-mouseleave="isHover=false" ng-repeat="question in form.questions track by $index">
                         <div class="question-title">
                             Q{{form.questions.indexOf(question) + 1}}&nbsp;&nbsp;<span contenteditable="true" ng-model="question.title">{{question.title}}</span>
+                            <span class="isMust" ng-show="question.type == 3"><input type="checkbox" name="question.title" ng-model="question.isMustAnswer">此题是否必填</span>
                         </div>
                         
                         <div class="select-options" ng-repeat="option in question.chose">
@@ -18,7 +19,6 @@
                         
                         <div class="select-options" ng-show="question.type == 3">
                             <textarea ng-show="question.type == 3"></textarea>
-                            <input type="checkbox" name="question.title" ng-show="question.type == 3" ng-model="question.isMustAnswer">此题是否必填
                         </div>    
                         
                         <div class="question-operation" ng-show="isHover">
@@ -30,23 +30,24 @@
                     </div>
                 </div>
                 
-                <div id="add-type" ng-show="isAdd">
-                    <button class="btn btn-default" ng-click="addOneSelect()">单选</button>
-                    <button class="btn btn-default" ng-click="addMutiSelect()">多选</button>
-                    <button class="btn btn-default" ng-click="addTextSelect()">文本题</button>
-                </div>
+                
 
                 <div id="main-add">
+                    <div id="add-type" ng-show="isAdd">
+                        <button class="btn btn-default" ng-click="addOneSelect()"><i class="fa fa-circle-o" aria-hidden="true"></i>&nbsp;单选</button>
+                        <button class="btn btn-default" ng-click="addMutiSelect()"><i class="fa fa-check-square" aria-hidden="true"></i>&nbsp;多选</button>
+                        <button class="btn btn-default" ng-click="addTextSelect()"><i class="fa fa-file-text" aria-hidden="true"></i>&nbsp;文本题</button>
+                    </div>
                     <button class="btn btn-default btn-lg" id="add-question" ng-click="isAdd=true">添加问题</button>
                 </div>    
             </div> 
         </div>
         <div id="input-div">
-            <img src="image/icon.png" id="icon">
+            <i class="fa fa-calendar fa-2x" id="icon" aria-hidden="true"></i>
             <input type="text" placeholder="点击选择截止日期" id="date-input" ng-model="endDate">
         </div>
-        <button class="btn btn-default" ng-click="uploadForm()" ui-sref="app">保存问卷</button>
-        <button class="btn btn-warning" ng-click="postForm()">发布问卷</button>
+        <button class="btn btn-default" id="edit-btn1" ng-click="uploadForm()" ui-sref="app">保存问卷</button>
+        <button class="btn btn-warning" id="edit-btn2" ng-click="postForm()" ui-sref="app">发布问卷</button>
         
         <div class="modal" id="modal-cannot-edit" ng-show="modalShow">
             <div class="overlay-mask" id="overlay-mask-1" ui-sref="app"></div>
