--- a/app/views/header.html
+++ b/app/views/header.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" ui-sref="app"><span class="glyphicon glyphicon-question-sign" aria-hidden="true">问卷管理</span>
+            <a class="navbar-brand" ui-sref="app"><span>问卷管理</span>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
