--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -68,6 +68,7 @@ th {
   min-height: 50px;
   margin-bottom: 20px;
   border: 1px solid transparent;
+  color: black;
 }
 @media (min-width: 768px) {
   .navbar {
@@ -82,6 +83,7 @@ th {
 .navbar-collapse {
   padding-right: 15px;
   padding-left: 15px;
+  padding-top: 15px;
   overflow-x: visible;
   -webkit-overflow-scrolling: touch;
   border-top: 1px solid transparent;
@@ -134,6 +136,7 @@ th {
 .navbar-toggle .icon-bar + .icon-bar {
   margin-top: 4px;
 }
+
 @media (min-width: 768px) {
   .navbar-toggle {
     display: none;
