--- a/app/views/home.html
+++ b/app/views/home.html
@@ -13,7 +13,7 @@
             </thead>
             
             <tbody ng-init="init()">
-                <tr ng-class="{pink: isHover}" ng-mouseenter="isHover=true" ng-mouseleave="isHover=false" ng-repeat="form in forms">
+                <tr ng-class="{pink: isHover}" ng-mouseenter="isHover=true" ng-mouseleave="isHover=false" ng-repeat="form in forms track by $index">
                     <td><input type="radio" id='radio{{form["_id"]}}' ng-click="radio[form._id]=true"></td>
                     <td>{{form["name"]}}</td>
                     <td>{{form["date"]}}</td>
