--- a/app/views/edit.html
+++ b/app/views/edit.html
@@ -7,14 +7,14 @@
                 <div id="question-container">
                     <div class="question" ng-class="{pink: isHover}" ng-mouseenter="isHover=true" ng-mouseleave="isHover=false" ng-repeat="question in form.questions track by $index">
                         <div class="question-title">
-                            Q{{form.questions.indexOf(question) + 1}}&nbsp;&nbsp;<span contenteditable="true" ng-model="question.title">{{question.title}}</span>
+                            Q{{form.questions.indexOf(question) + 1}}&nbsp;&nbsp;<input ng-class="{pink: isHover}" type="text" ng-model="question.title">
                             <span class="isMust" ng-show="question.type == 3"><input type="checkbox" name="question.title" ng-model="question.isMustAnswer">此题是否必填</span>
                         </div>
                         
                         <div class="select-options" ng-repeat="option in question.chose">
                             <input type="radio" name="question.title" ng-show="question.type == 1">
                             <input type="checkbox" ng-show="question.type == 2">
-                            <span contenteditable="true" ng-model="option">{{option}}</span>
+                            <input ng-class="{pink: isHover}" type="text" ng-model="option">
                         </div>
                         
                         <div class="select-options" ng-show="question.type == 3">
@@ -44,7 +44,7 @@
         </div>
         <div id="input-div">
             <i class="fa fa-calendar fa-2x" id="icon" aria-hidden="true"></i>
-            <input type="text" placeholder="点击选择截止日期" id="date-input" ng-model="endDate">
+            <input type="text" placeholder="点击选择截止日期" ng-click="showCalendar()" id="date-input" ng-model="endDate">
         </div>
         <button class="btn btn-default" id="edit-btn1" ng-click="uploadForm()" ui-sref="app">保存问卷</button>
         <button class="btn btn-warning" id="edit-btn2" ng-click="postForm()" ui-sref="app">发布问卷</button>
