--- a/app/views/home.html
+++ b/app/views/home.html
@@ -25,15 +25,14 @@
                     <td>
                 </tr>
                     
-                <tr>
-                    <input type="radio" ng-click="selectAll()" id="select-all">
-                    <p>全选</p>
-                    <button type="button" class="btn btn-default" ng-click="clickDelete($event)" id='delete-all-button'>删除</button>
-                </tr>
-            </tbody>
-            
-            
+            </tbody> 
         </table>
+        
+        <div id="home-bottom" ng-show="isShow">
+            <input type="radio" ng-click="selectAll()" id="select-all">
+            <span>全选</span>
+            <button type="button" class="btn btn-default" ng-class="{warning: isAll, disabled: !isAll}" ng-disabled="!isAll" ng-click="deleteAllShow=true" id='delete-all-button'>删除所有未发布问卷</button>
+        </div>
         
         <button type="button" class="btn btn-warning" ui-sref="app.edit" id="new-form" ng-hide="isShow">新建问卷</button>
         
@@ -51,6 +50,27 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-warning modal-func" ng-click="deleteCheck()">确定</button>
                         <button type="button" class="btn btn-default modal-cancel" ng-click="hideModal()">取消</button>
+                    </div>
+                </div>
+                <!-- /.modal-content -->
+            </div>
+            <!-- /.modal-dialog -->
+        </div>
+        
+        <div class="modal" id="modal-delete-all" ng-show="deleteAllShow">
+            <div class="overlay-mask" id="overlay-mask-0" ng-click="hideDeleteAll()"></div>
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close"><span aria-hidden="true" ng-click="hideDeleteAll()">&times;</span></button>
+                        <h4 class="modal-title">提示</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p>确认要删除所有可删除问卷？</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-warning modal-func" ng-click="deleteAllCheck()">确定</button>
+                        <button type="button" class="btn btn-default modal-cancel" ng-click="hideDeleteAll()">取消</button>
                     </div>
                 </div>
                 <!-- /.modal-content -->
