--- a/app/views/view.html
+++ b/app/views/view.html
@@ -26,5 +26,5 @@
             </div> 
         </div>
         <button class="btn btn-default" id="edit-btn1" ui-sref="app">返回上层</button>
-        <button class="btn btn-warning" id="edit-btn2">提交问卷</button>
+        <button class="btn btn-warning" id="edit-btn2" ui-sref="app">提交问卷</button>
     </div>
