--- a/app/views/edit.html
+++ b/app/views/edit.html
@@ -8,13 +8,16 @@
                     <div class="question" ng-class="{pink: isHover}" ng-mouseenter="isHover=true" ng-mouseleave="isHover=false" ng-repeat="question in form.questions track by $index">
                         <div class="question-title">
                             Q{{form.questions.indexOf(question) + 1}}&nbsp;&nbsp;<input ng-class="{pink: isHover}" type="text" ng-model="question.title">
+                            <span class="op-chose" ng-click="addChose(question)" ng-show="question.type != 3">新增选项</span>
+                            <span class="op-chose" ng-click="sortChose()" ng-show="question.type != 3">选项排序</span>
                             <span class="isMust" ng-show="question.type == 3"><input type="checkbox" name="question.title" ng-model="question.isMustAnswer">此题是否必填</span>
                         </div>
                         
-                        <div class="select-options" ng-repeat="option in question.chose">
+                        <div class="select-options" ng-mouseenter="isHoverDel=true" ng-mouseleave="isHoverDel=false" ng-repeat="option in question.chose track by $index">
                             <input type="radio" name="question.title" ng-show="question.type == 1">
                             <input type="checkbox" ng-show="question.type == 2">
-                            <input ng-class="{pink: isHover}" type="text" ng-model="option">
+                            <input ng-class="{pink: isHover}" type="text" ng-model="question['chose'][$index]">
+                            <span class="op-chose" ng-click="delChose(question, $index)"><i class="fa fa-times" ng-show="isHoverDel" aria-hidden="true"></i></span>
                         </div>
                         
                         <div class="select-options" ng-show="question.type == 3">
