--- a/app/views/home.html
+++ b/app/views/home.html
@@ -6,7 +6,7 @@
             <thead>
                 <th>
                     <td>标题</td>
-                    <td>最后修改时间</td>
+                    <td ng-click="sortTable()" id="sortTable">最后修改时间</td>
                     <td>状态</td>
                     <td>操作<button type="button" class="btn btn-warning" ui-sref="app.edit" id="new-form1">新建问卷</button></td>
                 </th>
